fix: letter spacing del título del home 35

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -160,6 +160,10 @@ If the separator is a ForkAwesome icon, define it as one.
   letter-spacing: 3px;
 }
 
+.letter-spacing-h1 {
+  letter-spacing: 5px;
+}
+
 blockquote {
   margin: 2rem;
   font-style: italic;
